--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav ul li a{
 .name
 {
 	padding: 60px;
-	margin-top: -50%;
+	margin-top: -65%;
 	background-image: cover;
 	box-shadow: 0 0 20px 10px rgba(0,0,0,1);
 	color: #fff;
@@ -77,7 +77,6 @@ nav ul li a{
 	font-size: 40px;
 	font-weight: bold; 
 	margin-left: 20px;
-	margin-top: -80px;
 	margin-bottom: 50px;
 }
 #personal .col-md-5 img
@@ -101,6 +100,10 @@ nav ul li a{
 #personal table td
 {
 	text-align: right;
+}
+#personal .description
+{
+	padding-left: 30px;
 }
 
 /*-----------------------------Education---------------------------------------*/
